<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cool"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patna"
                android:textColor="@android:color/white"
                android:layout_margin="@dimen/margin1"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:textSize="@dimen/size3"/>
            <TextView
                android:id="@+id/patna_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ScoreP"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/size2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/threepoints"
                android:layout_margin="@dimen/margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size1"
                android:onClick="addThreeToPatna"
                android:background="@color/color"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twopoints"
                android:layout_margin="@dimen/margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size1"
                android:onClick="addTwoToPatna"
                android:background="@color/color"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onepoints"
                android:layout_margin="@dimen/margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size1"
                android:onClick="addOneToPatna"
                android:background="@color/color"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bonuspoint"
                android:layout_margin="@dimen/margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size1"
                android:onClick="addBonusToPatna"
                android:background="@color/color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamil"
                android:layout_margin="@dimen/margin1"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size3"/>
            <TextView
                android:id="@+id/tamil_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoreT"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/threepoints"
                android:layout_margin="@dimen/margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size1"
                android:onClick="addThreeToTamil"
                android:background="@color/color"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twopoints"
                android:layout_margin="@dimen/margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size1"
                android:onClick="addTwoToTamil"
                android:background="@color/color"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onepoints"
                android:layout_margin="@dimen/margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size1"
                android:onClick="addOneToTamil"
                android:background="@color/color"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bonuspoint"
                android:layout_margin="@dimen/margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size1"
                android:onClick="addBonusToTamil"
                android:background="@color/color"/>

        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textSize="@dimen/size"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:onClick="resetScore"
        android:background="@color/color"/>


</RelativeLayout>